--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -7,38 +7,87 @@
     \centering
 	\begin{tabular}{|l|l|l|l|l|l|l|l|l|l||c|c|c|c|c|c|}
  	\hline
- 	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ &$IW$ & $FA$ & $CA$ &  $ATT(min)$ & $ATT(avg)$ & $ATT(max)$ & $T(min)$ & $T(avg)$ & $T(max)$\\
- 	\hline
-    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% & 11.1 & 11.5 & 12.5 & -256.0 &-244.6 & -231.0  \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% & 11.1 & 11.6 & 12.8 & -254.0 & -241.0 & -209.0 \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% & \textbf{11.1} & \textbf{11.6} & \textbf{12.4} & \textbf{-258.0} & \textbf{-245.6} & \textbf{-235.0}\\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% &  11.3 & 11.6 & 12.4 & -259.0 & -240.9 & -221.0  \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 0.1 & 10\% & 10\% &  11.2 & 11.6 & 12.2 & -256.0 & -242.4 & -219.0  \\
+    ~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ & $FA$ & $CA$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
     \hline
-    2 & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.01} & 10\% & 0.1 & 10\% & 10\% & 11.2 & 11.8 & 12.7 & -253.0 & -241.9 & -218.0  \\
-    ~ & 50 & 50 & 50\% & \textbf{0.01} & \textbf{0.9} & 10\% & 0.1 & 10\% & 10\% &  11.0 & 11.6 & 12.7 & -256.0 & -243.9 & -228.0  \\
-    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.5} & 10\% & 0.1 & 10\%& 10\% & 11.1 & 11.6 & 12.4 & -258.0 & -245.6 & -235.0 \\
-    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.7} & 10\% & 0.1 & 10\% & 10\% &  11.0 & 11.4 & 12.4 & -260.0 & -246.7 & -231.0 \\
-    ~ & 50 & 50 & 50\% & \textbf{0.5} & \textbf{0.9} & 10\% & 0.1 & 10\% & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\
-    ~ & 50 & 50 & 50\% & \textbf{0.9} & \textbf{0.9} & 10\% & 0.1 & 10\% & 10\% &  11.0 & 11.4 & 11.9 & -256.0 & -245.0 & -227.0  \\
+    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.5 & -256.0 & -250.9 & -241.0  \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & \textbf{10.9} & \textbf{11.2} & \textbf{11.5} & \textbf{-261.0} & \textbf{-251.1} & \textbf{-243.0} \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.7 & -265.0 & -247.4 & -235.0  \\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.1 & 11.5 & 12.2 & -257.0 & -245.5 & -238.0  \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.2 & 11.6 & -257.0 & -247.2 & -239.0  \\
     \hline
-    3 & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{1\%} & 0.1 & 10\% & 10\% & 11.1 & 11.6 & 12.3 & -254.0 & -242.7 & -228.0  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{10\%} & 0.1 & 10\% & 10\% &  \textbf{10.9} & \textbf{11.4} & \textbf{11.8} & \textbf{-266.0} & \textbf{-250.7} & \textbf{-229.0} \\\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{25\%} & 0.1 & 10\% & 10\% &  10.9 & 11.3 & 11.7 & -255.0 & -248.8 & -234.0 \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{50\%} & 0.1 & 10\% & 10\% &  10.9 & 11.4 & 12.6 & -261.0 & -250.2 & -231.0 \\
-    %~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{75\%} & 10\% & 1.0 & 10\% &  11.1 & 11.7 & 12.4 & -265.0 & -243.0 & -225.0 \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & \textbf{90\%} & 0.1 & 10\% & 10\% &  11.2 & 11.6 & 12.7 & -256.0 & -243.0 & -232.0 \\
+    2 & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.05} & 10\% & 10\% & 10\% & 10.9 & 11.3 & 11.6 & -251.0 & -243.7 & -235.0 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.1} & 10\% & 10\% & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
+    ~ & 50 & 50 & 10\% & \textbf{0.1} & \textbf{0.5} & 10\% & 10\% & 10\% & 11.0 & 11.2 & 11.7 & -261.0 & -248.0 & -235.0 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.5 & -261.0 & -251.1 & -243.0 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.4 & 11.9 & -255.0 & -244.7 & -237.0 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.9 & -261.0 & -248.1 & -230.0 \\
     \hline
-    4 & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.1} & 10\% & 10\% & 10.9 & 11.4 & 11.8 & -266.0 & -250.7 & -299.0  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.3} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{0.5} & 10\% & 10\% & 10.8 & 11.6 & 12.1 & -263.0 & -246.0 & -236.0  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{1.0} & 10\% & 10\% & 11.0 & 11.4 & 11.8 & -259.0 & -243.0 & -231.0  \\
-    ~ & 50 & 50 & 50\% & 0.5 & 0.9 & 10\% & \textbf{2.0} & 10\% & 10\% & 11.1 & 11.5 & 12.6 & -255.0 & -243.7 & -222.0  \\
+    3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & 11.1 & 11.3 & 11.5 & -254.0 & -247.3 & -243.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%} & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -263.0 & -250.4 & -245.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & 11.0 & 11.3 & 11.6 & -256.0 & -247.8 & -35.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{90\%} & 10\% & 10\% & 11.1 & 11.4 & 11.7 & -257.0 & -248.6 & -240.0 \\
     \hline
     \end{tabular}
-    \caption {Parameter settings experiment vol 1 not used}
+    \caption {Parameter settings experiment part 1}
+    \tiny
+    \begin{itemize}[noitemsep]
+    \item[$A^b$:] best $ATT$ value
+    \item[$A^a$:] average $ATT$ value
+    \item[$A^w$:] worst $ATT$ value
+    \item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
+    \item[$T^a$:] average $TOTFIT$ value
+    \item[$T^w$:] worst $TOTFIT$ value
+    \item[$^*$:] No ants satisfied the initial demands, \emph{\color{red} initial demands: }
+    \end{itemize}
+    \label{table:pm1}
+\end{sidewaystable}
 
-    \label{table:pmsNotUsed}
+\begin{sidewaystable}
+    \centering
+    \begin{tabular}{|l|l|l|l|l|l|l|l|l|l||c|c|c|c|c|c|}
+    \hline
+    ~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ & $FA$ & $CA$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
+    \hline
+    4 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{0\%} & 10.9 & 11.3 & 11.6 & -257.0 & -249.3 & -236.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{1\%} & 10.8 & 11.3 & 11.6 & -258.0 & -249.1 & -241.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{5\%} &  10.9 & 11.2 & 11.7 & -260.0 & -251.0 & -234.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{7\%} & 10.9 & 11.3 & 11.7 & -256.0 & -247.2 & -239.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{10\%} & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{12\%} & 10.9 & 11.2 & 11.5 & -256.6 & -248.6 & -239.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{17\%} & 11.0 & 11.5 & 11.8 & -250.0 & -245.0 & -237.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & 10.9 & 11.4 & 11.7 & -257.0 & -246.0 & -239.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & 11.1 & 11.4 & 11.7 & -255.0 & -242.6 & -233.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{75\%} & 11.2 & 11.4 & 11.8 & -258.0 & -245.4 & -237.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{90\%} & 11.1 & 11.5 & 11.8 & -252.0 & -241.8 & -235.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%$^*$} & - & - & - & - & - & - \\
+    \hline
+    5 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & 10.9 & 11.3 & 11.8 & -257.0 & -248.5 & -240.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & 10\% & 11.2 & 11.4 & 11.6 & -255.0 & -245.9 & -236.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & 10\% & 11.0 & 11.4 & 11.7 & -260.0 & -243.6 & -238.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & 10\% & 11.1 & 11.4 & 11.7 & -260.0 & -250.3 & -240.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{90\%} & 10\% & 11.0 & 11.3 & 11.5 & -255.0 & -244.0 & -229.0 \\
+    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{75\%} & 10\% & 11.2 & 11.5 & 12.0 & -260.0 & -243.9 & -234.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{100\%} & 10\% & 11.0 & 11.3 & 11.7 & -257.0 & -250.3 & -240.0 \\
+    %\hline
+    %Bonus round$^i$ 1& 50 & 50 & \textbf{1\%} & \textbf{0.5} & \textbf{0.5} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 10.9 & 11.3 & 11.5 & -250.0 & -245.6 & -237.0 \\
+    %Bonus round$^i$ 2& 50 & 50 & \textbf{10\%} & \textbf{0.01} & \textbf{0.25} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 11.0 & 11.3 & 12.0 & -258.0 & -247.9 & -234.0 \\
+
+    \hline
+    6 & \textbf{10$^*$} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & - & - & - & - & - & - \\
+    ~ & \textbf{25} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.6 & -252.0 & -242.1 & -232.0 \\
+    ~ & \textbf{50} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
+    ~ & \textbf{100} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.4 & -249.4 & -249.4 & -245.0 \\
+    ~ & \textbf{150} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.6 & -261.0 & -252.4 & -242.0 \\
+    ~ & \textbf{200} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    \hline
+    7 & ~ & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    \hline
+    \end{tabular}
+    \caption {Parameter settings experiment part 2}
+    \label{table:pm2}
 \end{sidewaystable}
 
 %TINY TABLE, VOL 2 TESTER:
@@ -84,22 +133,22 @@
     5 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & 10.9 & 11.3 & 11.8 & -257.0 & -248.5 & -240.0 \\
     %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & 10\% & 11.2 & 11.4 & 11.6 & -255.0 & -245.9 & -236.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
+    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & 10\% & 11.0 & 11.4 & 11.7 & -260.0 & -243.6 & -238.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & 10\% & 11.1 & 11.4 & 11.7 & -260.0 & -250.3 & -240.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{90\%} & 10\% & 11.0 & 11.3 & 11.5 & -255.0 & -244.0 & -229.0 \\
     %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{75\%} & 10\% & 11.2 & 11.5 & 12.0 & -260.0 & -243.9 & -234.0 \\
     ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{100\%} & 10\% & 11.0 & 11.3 & 11.7 & -257.0 & -250.3 & -240.0 \\
-    \hline
-    Bonus round$^i$ 1& 50 & 50 & \textbf{1\%} & \textbf{0.5} & \textbf{0.5} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 10.9 & 11.3 & 11.5 & -250.0 & -245.6 & -237.0 \\
-     Bonus round$^i$ 2& 50 & 50 & \textbf{10\%} & \textbf{0.01} & \textbf{0.25} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 11.0 & 11.3 & 12.0 & -258.0 & -247.9 & -234.0 \\
+    %\hline
+    %Bonus round$^i$ 1& 50 & 50 & \textbf{1\%} & \textbf{0.5} & \textbf{0.5} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 10.9 & 11.3 & 11.5 & -250.0 & -245.6 & -237.0 \\
+    %Bonus round$^i$ 2& 50 & 50 & \textbf{10\%} & \textbf{0.01} & \textbf{0.25} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 11.0 & 11.3 & 12.0 & -258.0 & -247.9 & -234.0 \\
 
     \hline
     6 & \textbf{10$^*$} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & - & - & - & - & - & - \\
     ~ & \textbf{25} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.6 & -252.0 & -242.1 & -232.0 \\
     ~ & \textbf{50} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    ~ & \textbf{100} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & \textbf{150} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & \textbf{100} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.4 & -249.4 & -249.4 & -245.0 \\
+    ~ & \textbf{150} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.6 & -261.0 & -252.4 & -242.0 \\
     ~ & \textbf{200} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     7 & ~ & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & ~ & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
@@ -114,7 +163,7 @@
     \item[$T^a$:] average $TOTFIT$ value
     \item[$T^w$:] worst $TOTFIT$ value
     \item[$^*$:] No ants satisfied the initial demands, \emph{\color{red} initial demands: }
-    \item[$^i$:] Testing values that gave next best results
+    %\item[$^i$:] Testing values that gave next best results
     \end{itemize}
     \label{table:parameterSettings}
 \end{table}
