--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -12,41 +12,40 @@
     \hline
     ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $CI_{(A)}$ & $b_{(A)}$ & $w_{(A)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$\\
     \hline
-    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 11.407 $\pm$ 0.016 & 11.1 & 11.9 & -268.520 $\pm$ 13.233 & -277.39 & -250.82 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 11.323 $\pm$ 0.029 & 10.7 & 12.2 & -267.255 $\pm$ 18.728 & -277.91 & -254.66 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.347 $\pm$ 0.026 & 10.7 & 12.1 & -268.784 $\pm$ 10.413 & -277.90 & -253.78 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.5} & 10\% & 11.302 $\pm$ 0.021 & 10.9 & 11.9 & -269.279 $\pm$ 14.871 & -282.02 & -256.67\\
-    ~ & 50 & 50 & 10\% & \textbf{0.7} & 10\% & 11.328 $\pm$ 0.019 & 11.0 & 11.8 & -268.216 $\pm$ 11.049 & -279.13 & -257.16\\
-    ~ & 50 & 50 & 10\% & \textbf{0.9} & 10\% & \textbf{11.314 $\pm$ 0.026} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.631 $\pm$ 6.193} & \textbf{-277.29} & \textbf{-260.53}\\
+    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 11.407 $\pm$ 0.075 & 11.1 & 11.9 & -268.520 $\pm$ 2.176 & -277.39 & -250.82 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 11.323 $\pm$ 0.101 & 10.7 & 12.2 & -267.255 $\pm$ 2.589 & -277.91 & -254.66 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.347 $\pm$ 0.096 & 10.7 & 12.1 & -268.784 $\pm$ 1.930 & -277.90 & -253.78 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & 10\% & 11.302 $\pm$ 0.087 & 10.9 & 11.9 & -269.279 $\pm$ 2.307 & -282.02 & -256.67\\
+    ~ & 50 & 50 & 10\% & \textbf{0.7} & 10\% & 11.328 $\pm$ 0.081 & 11.0 & 11.8 & -268.216 $\pm$ 1.988 & -279.13 & -257.16\\
+    ~ & 50 & 50 & 10\% & \textbf{0.9} & 10\% & \textbf{11.314 $\pm$ 0.097} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.631 $\pm$ 1.489} & \textbf{-277.29} & \textbf{-260.53}\\
     \hline
+    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 11.333 $\pm$ 0.084 & 10.9 & 11.8 & -269.150 $\pm$ 2.317 & -279.77 & -248.42 \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.402 $\pm$ 0.090 & 11.1 & 12.3 & -267.942 $\pm$ 2.237 & -278.29 & -254.21 \\
+    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% & 11.312 $\pm$ 0.093 & 10.7 & 12.1 & -269.576 $\pm$ 2.423 & -279.70 & -250.41 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & \textbf{11.307 $\pm$ 0.065} & \textbf{10.9} & \textbf{11.7} & \textbf{-270.387 $\pm$ 1.808}  & \textbf{-278.87} & \textbf{-259.73} \\
+    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.293 $\pm$ 0.09 & 11.0 & 11.9 & -269.795 $\pm$ 1.954 & -279.83 & -257.92 \\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 11.389 $\pm$ 0.089 & 10.9 & 11.9 & -267.243 $\pm$ 2.129 & -275.34 & -243.93 \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 11.413 $\pm$ 0.081 & 10.9 & 11.9 & -266.848 $\pm$ 3.042 & -282.08 & -247.42  \\
     \hline
-    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 11.333 $\pm$ 0.020 & 10.9 & 11.8 & -269.150 $\pm$ 15.007 & -279.77 & -248.42 \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.402 $\pm$ 0.023 & 11.1 & 12.3 & -267.942 $\pm$ 13.984 & -278.29 & -254.21 \\
-    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% & 11.312 $\pm$ 0.024 & 10.7 & 12.1 & -269.576 $\pm$ 16.400 & -279.70 & -250.41 \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & \textbf{11.307 $\pm$ 0.012} & \textbf{10.9} & \textbf{11.7} & \textbf{-270.387 $\pm$ 9.138}  & \textbf{-278.87} & \textbf{-259.73} \\
-    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.293 $\pm$ 0.023 & 11.0 & 11.9 & -269.795 $\pm$ 10.671 & -279.83 & -257.92 \\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 11.389 $\pm$ 0.022 & 10.9 & 11.9 & -267.243 $\pm$ 12.666 & -275.34 & -243.93 \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 11.413 $\pm$ 0.018 & 10.9 & 11.9 & -266.848 $\pm$ 25.855 & -282.08 & -247.42  \\
+    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.312 $\pm$ 0.079 & 10.8 & 11.7 & -267.670 $\pm$ 1.725 & -280.03 & -259.27 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.357 $\pm$ 0.085 & 10.7 & 12.0 & -268.188 $\pm$ 1.927 & -278.55 & -255.38 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & \textbf{11.276 $\pm$ 0.066} & \textbf{10.} & \textbf{11.6} & \textbf{-270.375 $\pm$ 1.859} & \textbf{-279.96} & \textbf{-259.48} \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.328 $\pm$ 0.075 & 10.9 & 11.8 & -269.542 $\pm$ 2.033 & -281.95 & -257.93 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.385 $\pm$ 0.084 & 10.8 & 11.9 & -268.295 $\pm$ 1.769 & -276.49 & -253.59 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.372 $\pm$ 0.108 & 10.9 & 12.3 & -268.262 $\pm$ 2.449 & -281.82 & -251.27 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.303 $\pm$ 0.070 & 10.9 & 11.7 & -270.353 $\pm$ 1.641 & -279.70 & -261.02  \\
     \hline
-    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.312 $\pm$ 0.018 & 10.8 & 11.7 & -267.670 $\pm$ 8.311 & -280.03 & -259.27 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.357 $\pm$ 0.020 & 10.7 & 12.0 & -268.188 $\pm$ 10.378 & -278.55 & -255.38 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & \textbf{11.276 $\pm$ 0.012} & \textbf{10.} & \textbf{11.6} & \textbf{-270.375 $\pm$ 9.661} & \textbf{-279.96} & \textbf{-259.48} \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.328 $\pm$ 0.016 & 10.9 & 11.8 & -269.542 $\pm$ 11.553 & -281.95 & -257.93 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.385 $\pm$ 0.020 & 10.8 & 11.9 & -268.295 $\pm$ 8.743 & -276.49 & -253.59 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.372 $\pm$ 0.032 & 10.9 & 12.3 & -268.262 $\pm$ 16.760 & -281.82 & -251.27 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.303 $\pm$ 0.014 & 10.9 & 11.7 & -270.353 $\pm$ 7.523 & -279.70 & -261.02  \\
-    \hline
-    $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.373 $\pm$ 0.231 & 11.2 & 13.9& -163.041 $\pm$ 1468.263 & -264.86 & -22.93  \\
-    ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.523 $\pm$ 0.033 & 11.1 & 12.4 & -258.946 $\pm$ 68.999 & -277.46& -221.18 \\
-    ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 11.397 $\pm$ 0.031 & 10.8 & 12.2 & -268.196 $\pm$ 15.596 & -281.20 & -249.13 \\
-    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & \textbf{11.178 $\pm$ 0.013} & \textbf{10.7} & \textbf{11.7} & \textbf{-274.218 $\pm$ 5.202} & \textbf{-279.77} & \textbf{-263.10} \\
-    ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 11.226 $\pm$ 0.014 & 10.9 & 11.7 & -272.719 $\pm$ 5.840 & -280.80 & -265.77  \\
+    $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.373 $\pm$ 0.288 & 11.2 & 13.9& -163.041 $\pm$ 22.922 & -264.86 & -22.93  \\
+    ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.523 $\pm$ 0.108 & 11.1 & 12.4 & -258.946 $\pm$ 4.969 & -277.46& -221.18 \\
+    ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 11.397 $\pm$ 0.106 & 10.8 & 12.2 & -268.196 $\pm$ 2.362 & -281.20 & -249.13 \\
+    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & \textbf{11.178 $\pm$ 0.069} & \textbf{10.7} & \textbf{11.7} & \textbf{-274.218 $\pm$ 1.364} & \textbf{-279.77} & \textbf{-263.10} \\
+    ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 11.226 $\pm$ 0.071 & 10.9 & 11.7 & -272.719 $\pm$ 1.446 & -280.80 & -265.77  \\
     \hline
     $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& - \\
     ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & -  \\
-    ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.324 $\pm$ 0.022 & 10.8 & 11.9 & -268.131 $\pm$ 18.78 & -279.70 & -248.58\\
-    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & \textbf{11.248 $\pm$ 0.019} & \textbf{10.7} & \textbf{11.8} & \textbf{-272.367 $\pm$ 6.47} & \textbf{-278.45} & \textbf{-261.17}\\
-    ~ & \textbf{150} & 50 & 10\% & 0.5 & 10\% & 11.158 $\pm$ 0.015 & 10.6 & 11.5 & -274.543 $\pm$ 5.01 & -282.53 & -267.74\\
+    ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.324 $\pm$ 0.09 & 10.8 & 11.9 & -268.131 $\pm$ 2.592 & -279.70 & -248.58\\
+    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & \textbf{11.248 $\pm$ 0.083} & \textbf{10.7} & \textbf{11.8} & \textbf{-272.367 $\pm$ 1.522} & \textbf{-278.45} & \textbf{-261.17}\\
+    ~ & \textbf{150} & 50 & 10\% & 0.5 & 10\% & 11.158 $\pm$ 0.075 & 10.6 & 11.5 & -274.543 $\pm$ 1.338 & -282.53 & -267.74\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
     \hline
     \end{tabular}
@@ -70,7 +69,6 @@
     \label{table:pm1}
 \end{sidewaystable}
 
-
 %CA OG FA
 \begin{sidewaystable}
     %\centering
@@ -79,20 +77,21 @@
     \hline
     ~ & $AF$ & $CA$ & $CI_{(ATT)}$ & $b_{(ATT)}$ & $w_{(ATT)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$ \\
     \hline
-    $AF$ & \textbf{0\%} & 10\% & \textbf{11.326 $\pm$ 0.018} & \textbf{10.7} & \textbf{12.0} & \textbf{-268.581 $\pm$ 10.091} & \textbf{-278.36} & \textbf{-253.59} \\
-    ~ & \textbf{1\%} & 10\% & 11.332 $\pm$ 0.015 & 10.9 & 12.2 & -268.400 $\pm$ 12.583  & -281.18 & -254.74 \\
-    ~ & \textbf{5\%} & 10\% & 11.387 $\pm$ 0.017 & 10.8 & 12.0 & -268.087 $\pm$ 8.675 & -277.78 & -252.78 \\ 
-    ~ & \textbf{10\%} & 10\% & 11.380 $\pm$ 0.020 & 10.7 & 12.2 & -246.116 $\pm$ 13.095 & -279.13 & -246.12 \\ 
-    ~ & \textbf{50\%} & 10\% & 11.327 $\pm$ 0.012 & 10.8 & 11.8 & -267.70 $\pm$ 15.718 & -281.12& -239.94 \\ 
-    ~ & \textbf{75\%} & 10\% & 11.416 $\pm$ 0.024 & 10.8 & 12.4 & -266.33 $\pm$ 14.057 & -278.48 & -245.41 \\ 
-    ~ & \textbf{100\%} & 10\% & 11.776 $\pm$ 0.053 & 11.0 & 12.8 & -238.18 $\pm$ 116.883 & -279.25 & -179.02 \\ 
+    $AF$ & \textbf{0\%} & 10\% & 11.326 $\pm$ 0.071 & 10.7 & 12.0 & -268.581 $\pm$ 1.672 & -278.36 & -253.59\\ 
+    ~ & \textbf{1\%} & 10\% & 11.332 $\pm$ 0.066 & 10.9 & 12.2 & -268.400 $\pm$ 1.868  & -281.18 & -254.74 \\
+    ~ & \textbf{5\%} & 10\% & 11.387 $\pm$ 0.068 & 10.8 & 12.0 & -268.087 $\pm$ 1.551 & -277.78 & -252.78 \\ 
+    ~ & \textbf{10\%} & 10\% & 11.380 $\pm$ 0.075 & 10.7 & 12.2 & -268.913 $\pm$ 1.905 & -279.13 & -246.12 \\ 
+    ~ & \textbf{25\%} & 10\% & \textbf{11.366 $\pm$ 0.013} & \textbf{11.3} & \textbf{11.4} & \textbf{-272.392 $\pm$ 0.108} & \textbf{-272.92} & \textbf{-272.00}\\
+    ~ & \textbf{50\%} & 10\% & 11.327 $\pm$ 0.058 & 10.8 & 11.8 & -267.70 $\pm$ 2.087 & -281.12& -239.94 \\ 
+    ~ & \textbf{75\%} & 10\% & 11.416 $\pm$ 0.081 & 10.8 & 12.4 & -266.33 $\pm$ 1.974 & -278.48 & -245.41 \\ 
+    ~ & \textbf{100\%} & 10\% & 11.776 $\pm$ 0.122 & 11.0 & 12.8 & -238.18 $\pm$ 5.692& -279.25 & -179.02 \\ 
     \hline
-    $CA$ & 10\% &\textbf{0\%} & 11.320 $\pm$ 0.017 & 10.9 & 12.0 & -268.291 $\pm$ 11.986 & -278.74 & -250.66 \\
-    ~ & 10\% &\textbf{1\%} & 11.330 $\pm$ 0.017 & 10.9 & 12.1 & -268.608 $\pm$ 9.236 & -281.53 & -248.49 \\
-    ~ & 10\% &\textbf{5\%} & \textbf{11.308 $\pm$ 0.016} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.272 $\pm$ 8.704} & \textbf{-278.99} & \textbf{-254.14} \\
-    ~ & 10\% &\textbf{10\%} & 11.360 $\pm$ 0.016 & 10.8 & 12.0 & -268.016 $\pm$ 9.306 & -280.22 & -250.82 \\
-    ~ & 10\% &\textbf{25\%} & 11.371 $\pm$ 0.018 & 10.9 & 12.2 & -269.622 $\pm$ 6.754 & -280.73 & -255.94 \\
-    ~ & 10\% &\textbf{50\%} & 11.489 $\pm$ 0.028 & 11.0 & 12.6 & -265.178 $\pm$ 17.180 & -279.38 & -247.85 \\
+    $CA$ & 10\% &\textbf{0\%} & 11.320 $\pm$ 0.070 & 10.9 & 12.0 & -268.291 $\pm$ 1.823 & -278.74 & -250.66 \\
+    ~ & 10\% &\textbf{1\%} & 11.330 $\pm$ 0.069 & 10.9 & 12.1 & -268.608 $\pm$ 1.600 & -281.53 & -248.49 \\
+    ~ & 10\% &\textbf{5\%} & \textbf{11.308 $\pm$ 0.067} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.272 $\pm$ 1.553} & \textbf{-278.99} & \textbf{-254.14} \\
+    ~ & 10\% &\textbf{10\%} & 11.360 $\pm$ 0.067 & 10.8 & 12.0 & -268.016 $\pm$ 1.606 & -280.22 & -250.82 \\
+    ~ & 10\% &\textbf{25\%} & 11.371 $\pm$ 0.070 & 10.9 & 12.2 & -269.622 $\pm$ 1.368 & -280.73 & -255.94 \\
+    ~ & 10\% &\textbf{50\%} & 11.489 $\pm$ 0.088 & 11.0 & 12.6 & -265.178 $\pm$ 2.182 & -279.38 & -247.85 \\
     ~ & 10\% &\textbf{75\%$^*$} & - & - & - & - & - & - \\
     ~ & 10\% &\textbf{100\%$^*$} & - & - & - & - & - & - \\
     \hline
@@ -114,6 +113,5 @@
     \end{itemize}
     \label{table:pm2}
 \end{sidewaystable}
-
 
 
